SPDI-121634 Introduce Virtual Thread in CompactSplitThread